message(${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(particles)
add_subdirectory(simulations)
add_subdirectory(systems)
add_subdirectory(vesicleIO)
add_subdirectory(interactions)
add_subdirectory(thermostats)
add_subdirectory(geometries)
# target_include_directories(IO PUBLIC ${PROJECT_SOURCE_DIR}/HighFive/include/highfive)