find_package(Boost QUIET REQUIRED COMPONENTS system unit_test_framework)

add_executable(systems_test ${vesicle_SOURCE_DIR}/tests/systems_test.cpp)
set_target_properties(systems_test PROPERTIES CXX_STANDARD 17)
target_compile_options(systems_test PRIVATE -Wall -Wextra -Wpedantic -fmax-errors=3 -Weffc++ -march=nocona  -std=c++17)
target_link_libraries(systems_test vesicle_lib enhance "-lboost_unit_test_framework")
add_test(NAME systems COMMAND systems_test)
target_include_directories(systems_test PUBLIC ${vesicle_SOURCE_DIR})
target_include_directories(systems_test PUBLIC ${vesicle_SOURCE_DIR}/src)

add_executable(particles_test ${vesicle_SOURCE_DIR}/tests/particles_test.cpp)
set_target_properties(particles_test PROPERTIES CXX_STANDARD 17)
target_compile_options(particles_test PRIVATE -Wall -Wextra -Wpedantic -fmax-errors=3 -Weffc++ -march=nocona  -std=c++17)
target_link_libraries(particles_test enhance "-lboost_unit_test_framework")
add_test(NAME particles COMMAND particles_test)
target_include_directories(particles_test PUBLIC ${vesicle_SOURCE_DIR})
target_include_directories(particles_test PUBLIC ${vesicle_SOURCE_DIR}/src)

add_executable(trajectory_reader_test ${vesicle_SOURCE_DIR}/tests/trajectory_reader_test.cpp)
set_target_properties(trajectory_reader_test PROPERTIES CXX_STANDARD 17)
target_compile_options(trajectory_reader_test PRIVATE -Wall -Wextra -Wpedantic -fmax-errors=3 -Weffc++ -march=nocona  -std=c++17)
target_link_libraries(trajectory_reader_test vesicle_lib "-lboost_unit_test_framework")
add_test(NAME trajectory_reader COMMAND trajectory_reader_test)
target_include_directories(trajectory_reader_test PUBLIC ${vesicle_SOURCE_DIR})
target_include_directories(trajectory_reader_test PUBLIC ${vesicle_SOURCE_DIR}/src)

add_executable(parsers_test ${vesicle_SOURCE_DIR}/tests/parsers_test.cpp)
set_target_properties(parsers_test PROPERTIES CXX_STANDARD 17)
target_compile_options(parsers_test PRIVATE -Wall -Wextra -Wpedantic -fmax-errors=3 -Weffc++ -march=nocona  -std=c++17)
target_link_libraries(parsers_test vesicle_analysis_lib "-lboost_unit_test_framework")
add_test(NAME parsers COMMAND parsers_test)
target_include_directories(parsers_test PUBLIC ${vesicle_SOURCE_DIR})
target_include_directories(parsers_test PUBLIC ${vesicle_SOURCE_DIR}/src)
target_include_directories(parsers_test PUBLIC ${vesicle_SOURCE_DIR}/analysis/src)